--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
-    <!-- <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+    <!--    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">-->
+    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Admin</title>
@@ -206,7 +204,7 @@
 
                             </tbody>
                         </table>
-                    </div>  
+                    </div>
                 </div>
             </div>
 
@@ -236,8 +234,8 @@
                     </div>-->
                     <!--<p>Username:&nbsp;</p>
                     <div class="detail">-->
-                        <!-- get userName from DB-->
-                        <!--<label class="admin_searchUserUsername">lucid123</label>
+                    <!-- get userName from DB-->
+                    <!--<label class="admin_searchUserUsername">lucid123</label>
                     </div>-->
                     <p>Full name:&nbsp;</p>
                     <div class="detail">
@@ -355,15 +353,15 @@
                     <!--<div class="edit-group">
                         <p>NRIC:&nbsp;</p>
                         <div class="detail">-->
-                                    <!-- get userNRIC from DB-->
-                                    <!--<label id="admin_editNRIC">Ab1234567</label>
+                    <!-- get userNRIC from DB-->
+                    <!--<label id="admin_editNRIC">Ab1234567</label>
                         </div>
                     </div>-->
-                                    <!--<div class="edit-group">
-                        <p>Username:&nbsp;</p>
-                        <div class="detail">-->
-                                    <!-- get userName from DB-->
-                                    <!--<input type="text" class="form-control" id="admin_editUsername">
+                    <!--<div class="edit-group">
+                    <p>Username:&nbsp;</p>
+                    <div class="detail">-->
+                    <!-- get userName from DB-->
+                    <!--<input type="text" class="form-control" id="admin_editUsername">
                         </div>
                     </div>-->
                     <div class="edit-group">
@@ -408,9 +406,9 @@
                         <p>Sex:&nbsp;</p>
                         <div class="detail">
                             <!--       <input type="radio" class="sex_input" id="admin_editFemale" name="sex" value="F">
-            <label for="female" class="sex_label">F</label>
-            <input type="radio" class="sex_input" id="male" name="sex" value="M">
-            <label for="male" class="sex_label">M</label><br>-->
+                            <label for="female" class="sex_label">F</label>
+                            <input type="radio" class="sex_input" id="male" name="sex" value="M">
+                            <label for="male" class="sex_label">M</label><br>-->
                             <label class="admin_editGender">F</label>
 
                         </div>
@@ -448,20 +446,20 @@
             </div>
         </div>
     </div>
+
     <!-- ./wrapper -->
     <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
     <!-- AdminLTE -->
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.js "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <!-- getdatepicker -->
     <!-- datatable -->
-    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
+    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>-->
+    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
 
     <script>
@@ -469,7 +467,7 @@
             $(".nav").find(".active").removeClass("active");
             $(this).addClass("active");
         });
-        
+
         $(function () {
 
             $('#searchUser').DataTable({
