--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -88,7 +88,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
                                     Pending user profile
 
@@ -383,65 +383,65 @@
                         <div class="detail">
                             <!-- get userName from DB-->
                             <select class="form-control" style="display: inline-block" id="admin_editUserProfile" ">
-                                <option value="Reviewer">Reviewer</option>
-                                <option value="Author">Author</option>
-                                <option value="User Admin">User Admin</option>
-                                <option value="Conference Chair">Conference Chair</option>
+                                <option value="Reviewer ">Reviewer</option>
+                                <option value="Author ">Author</option>
+                                <option value="User Admin ">User Admin</option>
+                                <option value="Conference Chair ">Conference Chair</option>
 
                             </select>
                         </div>
                     </div>
-                    <div style="clear: both;">
-                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
-                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Info</p>
+                    <div style="clear: both; ">
+                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute; "></div>
+                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline; ">Info</p>
                     </div>
-                    <div class="edit-group">
+                    <div class="edit-group ">
                         <p>Full Name:&nbsp;</p>
-                        <div class="detail">
+                        <div class="detail ">
                             <!-- get userName from DB-->
-                            <input type="text" class="form-control" id="admin_editFullName">
+                            <input type="text " class="form-control " id="admin_editFullName ">
                         </div>
                     </div>
-                    <div class="edit-group">
+                    <div class="edit-group ">
                         <p>Sex:&nbsp;</p>
-                        <div class="detail">
-                            <!--       <input type="radio" class="sex_input" id="admin_editFemale" name="sex" value="F">
-                            <label for="female" class="sex_label">F</label>
-                            <input type="radio" class="sex_input" id="male" name="sex" value="M">
-                            <label for="male" class="sex_label">M</label><br>-->
-                            <label class="admin_editGender">F</label>
+                        <div class="detail ">
+                            <!--       <input type="radio " class="sex_input " id="admin_editFemale " name="sex " value="F ">
+                            <label for="female " class="sex_label ">F</label>
+                            <input type="radio " class="sex_input " id="male " name="sex " value="M ">
+                            <label for="male " class="sex_label ">M</label><br>-->
+                            <label class="admin_editGender ">F</label>
 
                         </div>
                     </div>
-                    <div class="edit-group">
+                    <div class="edit-group ">
                         <p>Age:&nbsp;</p>
-                        <div class="detail">
+                        <div class="detail ">
                             <!-- get userName from DB-->
-                            <input type="number" class="form-control" id="admin_editAge" min="1" maxlength="3">
+                            <input type="number " class="form-control " id="admin_editAge " min="1 " maxlength="3 ">
                         </div>
                     </div>
 
-                    <!--                    <div style="clear: both;">
-                            <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
-                            <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Info</p>
+                    <!--                    <div style="clear: both; ">
+                            <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute; "></div>
+                            <p style="font-size:16px; color: black; margin-left: 10px; display: inline; ">Info</p>
                         </div>-->
-                    <div class="edit-group">
+                    <div class="edit-group ">
                         <p>Contact:&nbsp;</p>
-                        <div class="detail">
+                        <div class="detail ">
                             <!-- get userName from DB-->
-                            <input type="text" class="form-control" id="admin_editContact">
+                            <input type="text " class="form-control " id="admin_editContact ">
                         </div>
                     </div>
 
-                    <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
+                    <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
                         Back
                     </button>
-                    <button type="button" style="float: right; color: white; margin-right: 10px;" class="blue_btn" data-toggle="modal" data-target="#saveModal">
+                    <button type="button " style="float: right; color: white; margin-right: 10px; " class="blue_btn " data-toggle="modal " data-target="#saveModal ">
                         Save
                     </button>
 
                 </div>
-                <div class="modal-footer" style="border: none;">
+                <div class="modal-footer " style="border: none; ">
                 </div>
             </div>
         </div>
@@ -454,30 +454,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
     <!-- AdminLTE -->
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.js "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js "></script>
     <!-- datatable -->
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
-    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>-->
-    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js "></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js "></script>
+    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js "></script>-->
+    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js "></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js "></script>
 
     <script>
-        $(".nav .nav-link").on("click", function () {
-            $(".nav").find(".active").removeClass("active");
-            $(this).addClass("active");
+        $(".nav .nav-link ").on("click ", function () {
+            $(".nav ").find(".active ").removeClass("active ");
+            $(this).addClass("active ");
         });
 
         $(function () {
 
             $('#searchUser').DataTable({
-                "paging": true,
-                "lengthChange": true,
-                "searching": true,
-                "ordering": true,
-                "info": true,
-                "autoWidth": true,
-                "responsive": true,
+                "paging ": true,
+                "lengthChange ": true,
+                "searching ": true,
+                "ordering ": true,
+                "info ": true,
+                "autoWidth ": true,
+                "responsive ": true,
             });
         });
     </script>
