--- a/admin_profilePage.html
+++ b/admin_profilePage.html
@@ -89,7 +89,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
                                     Pending user profile
 
@@ -216,7 +216,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
 
     <script>
-        $(".nav .nav-link").on("click", function () {
+        $(".nav .nav-link").on("click", function() {
             $(".nav").find(".active").removeClass("active");
             $(this).addClass("active");
         });
