--- a/admin_addUserProfile.html
+++ b/admin_addUserProfile.html
@@ -91,7 +91,7 @@
                             <a href="admin_addUserProfile.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
-                                    Pending user profile
+                                    Add user profile
 
                                 </p>
                             </a>
@@ -107,7 +107,14 @@
                             </a>
 
                         </li>
-
+                        <li class="nav-item active">
+                            <a href="admin_searchUserProfilePage.html" class="nav-link">
+                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <p class="navHeader">
+                                    Search user profile
+                                </p>
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
                             <a href="admin_profilePage.html" class="nav-link ">
