--- a/admin_searchUserProfilePage.html
+++ b/admin_searchUserProfilePage.html
@@ -91,8 +91,10 @@
                                 <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
                                     Pending user profile
+
                                 </p>
                             </a>
+
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
@@ -116,7 +118,6 @@
                                 <i class="nav-icon"><img src="img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
-
                                 </p>
                             </a>
                         </li>
@@ -141,22 +142,22 @@
                 <div class="card" style="margin-top: 20px;margin-bottom: 0;">
                     <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
                         <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
-                        <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Search User</p>
+                        <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Search User Profile</p>
                     </div>
 
                     <div class="card-body">
                         <div>
-                            <p class="searchLeft">Enter User Name: </p>
+                            <p class="searchLeft">Select User Profile: </p>
                             <!-- search User ID -->
-                            <input type="search" id="searchName" class="form-control form-control-lg" placeholder="Search User Name">
-                            <!-- <select id="searchUserProfile" class="form-control" style="width: 200px;display: inline-block">
+                            <!-- <input type="search" id="searchName" class="form-control form-control-lg" placeholder="Search User Name"> -->
+                            <select id="searchUserProfile" class="form-control" style="width: 200px;display: inline-block">
 
                                 <option>All</option>
                                 <option>Reviewers</option>
                                 <option>Authors</option>
                                 <option>User Admin</option>
 
-                            </select> -->
+                            </select>
                             <button type="submit" class="btn btn-outline-primary search_button">search</button>
                         </div>
 
@@ -171,7 +172,8 @@
                                 <tr>
                                     <!--<th>NRIC</th>-->
                                     <th>Full Name</th>
-                                    <!-- <th>User Profile</th> -->
+                                    <th>User Profile</th>
+
                                     <th>Action</th>
 
                                 </tr>
@@ -180,7 +182,9 @@
                                 <tr>
                                     <!--              <td>S12345678</td>-->
                                     <td>Mike Doe</td>
-                                    <!-- <td>Author</td> -->
+                                    <td>Author</td>
+
+
                                     <td>
                                         <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#searchUserModal">
                                             Details
@@ -209,60 +213,25 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <!-- <p>User Profile:&nbsp;</p>
-                    <div class="detail"> -->
-                    <!-- get userProfile from DB-->
-                    <!-- <label class="admin_searchUserProfile">Author</label>
-                    </div> -->
-                    <!--<p>NRIC:&nbsp;</p>
-                    <div class="detail">-->
-                    <!-- get userID from DB-->
-                    <!--<label class="admin_searchUserNRIC">Ab1234567</label>
-                    </div>-->
-                    <!--<p>Username:&nbsp;</p>
-                    <div class="detail">-->
-                    <!-- get userName from DB-->
-                    <!--<label class="admin_searchUserUsername">lucid123</label>
-                    </div>-->
                     <p>Full name:&nbsp;</p>
                     <div class="detail">
                         <!-- get userFullName from DB-->
                         <label class="admin_searchUserFullName">Lucid Marry</label>
                     </div>
-                    <p>Age:&nbsp;</p>
+                    <p>User Profile:&nbsp;</p>
                     <div class="detail">
-                        <!-- get UserAge from DB-->
-                        <label class="admin_searchUserAge">38</label>
-                    </div>
-                    <p>Sex:&nbsp;</p>
-                    <div class="detail">
-                        <!-- get UserNRIC from DB-->
-                        <label class="admin_searchUserGender">F</label>
-                    </div>
-                    <p>Contact:&nbsp;</p>
-                    <div class="detail">
-                        <!-- get UserPhoneNo from DB-->
-                        <label class="admin_searchUserPhoneNo">(+65)8501230</label>
-                    </div>
-                    <p>Email:&nbsp;</p>
-                    <div class="detail">
-                        <!-- get UserEmail from DB-->
-                        <label class="admin_searchUserEmail">user123@gmai.com</label>
+                        <!-- get userName from DB-->
+                        <label class="admin_searchUserProfile">Author</label>
                     </div>
                     <button type="button" class="blue_btn" data-toggle="modal" data-target="#editModal" id="editDetail_btn">
                         Edit Detail
                     </button>
-                    <!--                    <button type="button" class="red_btn" data-toggle="modal" data-target="#deleteModal">
-                                            delete user
-                                        </button>-->
-
                 </div>
                 <div class="modal-footer" style="border: none;">
                 </div>
             </div>
         </div>
     </div>
-
     <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index:1060">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -299,50 +268,6 @@
                 </div>
                 <div class="modal-body">
                     <div>
-                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
-                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Account</p>
-                    </div>
-                    <!--<div class="edit-group">
-                        <p>NRIC:&nbsp;</p>
-                        <div class="detail">-->
-                    <!-- get userNRIC from DB-->
-                    <!--<label id="admin_editNRIC">Ab1234567</label>
-                        </div>
-                    </div>-->
-                    <!--<div class="edit-group">
-                    <p>Username:&nbsp;</p>
-                    <div class="detail">-->
-                    <!-- get userName from DB-->
-                    <!--<input type="text" class="form-control" id="admin_editUsername">
-                        </div>
-                    </div>-->
-                    <div class="edit-group">
-                        <p>Email:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get userName from DB-->
-                            <input type="email" class="form-control" id="contact">
-                        </div>
-                    </div>
-                    <div class="edit-group">
-                        <p>Password:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get userFullName from DB-->
-                            <input type="password" class="form-control" id="admin_editPassword">
-                        </div>
-                    </div>
-                    <!-- <div class="edit-group">
-                        <p>User Profile:&nbsp;</p>
-                        <div class="detail">
-                            <select class="form-control" style="display: inline-block" id="admin_editUserProfile" ">
-                                <option value="Reviewer ">Reviewer</option>
-                                <option value="Author ">Author</option>
-                                <option value="User Admin ">User Admin</option>
-                                <option value="Conference Chair ">Conference Chair</option>
-
-                            </select>
-                        </div>
-                    </div> -->
-                    <div style="clear: both; ">
                         <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute; "></div>
                         <p style="font-size:16px; color: black; margin-left: 10px; display: inline; ">Info</p>
                     </div>
@@ -353,36 +278,26 @@
                             <input type="text " class="form-control " id="admin_editFullName ">
                         </div>
                     </div>
-                    <div class="edit-group ">
-                        <p>Sex:&nbsp;</p>
-                        <div class="detail ">
-                            <!--       <input type="radio " class="sex_input " id="admin_editFemale " name="sex " value="F ">
-                            <label for="female " class="sex_label ">F</label>
-                            <input type="radio " class="sex_input " id="male " name="sex " value="M ">
-                            <label for="male " class="sex_label ">M</label><br>-->
-                            <label class="admin_editGender ">F</label>
-
-                        </div>
-                    </div>
-                    <div class="edit-group ">
-                        <p>Age:&nbsp;</p>
-                        <div class="detail ">
-                            <!-- get userName from DB-->
-                            <input type="number " class="form-control " id="admin_editAge " min="1 " maxlength="3 ">
-                        </div>
+                    <div>
+                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
+                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Account</p>
                     </div>
 
-                    <!--                    <div style="clear: both; ">
-                            <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute; "></div>
-                            <p style="font-size:16px; color: black; margin-left: 10px; display: inline; ">Info</p>
-                        </div>-->
-                    <div class="edit-group ">
-                        <p>Contact:&nbsp;</p>
-                        <div class="detail ">
+                    <div class="edit-group">
+                        <p>User Profile:&nbsp;</p>
+                        <div class="detail">
                             <!-- get userName from DB-->
-                            <input type="text " class="form-control " id="admin_editContact ">
+                            <select class="form-control" style="display: inline-block" id="admin_editUserProfile" ">
+                                <option value="Reviewer ">Reviewer</option>
+                                <option value="Author ">Author</option>
+                                <option value="User Admin ">User Admin</option>
+                                <option value="Conference Chair ">Conference Chair</option>
+
+                            </select>
                         </div>
                     </div>
+ 
+  
 
                     <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
                         Back
@@ -414,12 +329,12 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js "></script>
 
     <script>
-        $(".nav .nav-link ").on("click ", function() {
+        $(".nav .nav-link ").on("click ", function () {
             $(".nav ").find(".active ").removeClass("active ");
             $(this).addClass("active ");
         });
 
-        $(function() {
+        $(function () {
 
             $('#searchUser').DataTable({
                 "paging ": true,
