--- a/CSIT314/boundary/admin_searchUserProfilePage.html
+++ b/CSIT314/boundary/admin_searchUserProfilePage.html
@@ -90,7 +90,7 @@
                             <a href="admin_addUserProfile.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
-                                    Pending user profile
+                                    Add user profile
 
                                 </p>
                             </a>
