--- a/CSIT314/boundary/admin_addUserProfile.html
+++ b/CSIT314/boundary/admin_addUserProfile.html
@@ -145,7 +145,7 @@
             <div class="col-12">
                 <div class="card" style="margin-top: 20px;">
                     <div class="card-header" style="padding-top: 0; padding-bottom: 0; background-color: white;">
-                        <p style="font-size:20px; color: black; margin-left: 10px; margin-top: 25px;">Personal Profile</p>
+                        <p style="font-size:20px; color: black; margin-left: 10px; margin-top: 25px;">User Profile</p>
                     </div>
                     <div id="settings" style="padding: 30px;">
                         <form class="form-horizontal">
