--- a/CSIT314/boundary/admin_searchUserProfilePage.html
+++ b/CSIT314/boundary/admin_searchUserProfilePage.html
@@ -149,25 +149,22 @@
                         <div>
                             <p class="searchLeft">Select User Profile: </p>
                             <!-- search User ID -->
-                            <!-- <input type="search" id="searchName" class="form-control form-control-lg" placeholder="Search User Name"> -->
-                            <select id="searchUserProfile" class="form-control" style="width: 200px;display: inline-block">
-
-                                <option>All</option>
-                                <option>Reviewers</option>
-                                <option>Authors</option>
-                                <option>User Admin</option>
-
+                            <select id="searchUserProfile" class="form-control select2" data-dropdown-css-class="select2-purple" multiple="multiple">
+                                    <option>Reviewer</option>
+                                    <option>Author</option>
+                                    <option>User Admin</option>
+                                    <option>Conference Chair</option>
                             </select>
-                            <button type="submit" class="btn btn-outline-primary search_button">search</button>
+                            <button type=" submit " class="btn btn-outline-primary search_button ">search</button>
                         </div>
 
                     </div>
                 </div>
             </div>
-            <div class="col-12">
-                <div class="card" style="margin-top: 20px;">
-                    <div class="card-body">
-                        <table id="searchUser" class="table table-hover table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="width:100%">
+            <div class="col-12 ">
+                <div class="card " style="margin-top: 20px; ">
+                    <div class="card-body ">
+                        <table id="searchUser " class="table table-hover table-bordered dt-responsive nowrap dataTable no-footer dtr-inline " style="width:100% ">
                             <thead>
                                 <tr>
                                     <!--<th>NRIC</th>-->
@@ -186,7 +183,7 @@
 
 
                                     <td>
-                                        <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#searchUserModal">
+                                        <button type="button " class="detail_action_btn " data-toggle="modal " data-target="#searchUserModal ">
                                             Details
                                         </button>
                                     </td>
@@ -202,71 +199,71 @@
         </div>
     </div>
 
-    <div class="modal fade" id="searchUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666;"></div>
-                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">User has been added successfully</p>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+    <div class="modal fade " id="searchUserModal " tabindex="-1 " role="dialog " aria-labelledby="exampleModalCenterTitle " aria-hidden="true ">
+        <div class="modal-dialog modal-dialog-centered " role="document ">
+            <div class="modal-content ">
+                <div class="modal-header ">
+                    <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666; "></div>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline; ">User has been added successfully</p>
+                    <button type="button " class="close " data-dismiss="modal " aria-label="Close ">
+                        <span aria-hidden="true ">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body ">
                     <p>Full name:&nbsp;</p>
-                    <div class="detail">
+                    <div class="detail ">
                         <!-- get userFullName from DB-->
-                        <label class="admin_searchUserFullName">Lucid Marry</label>
+                        <label class="admin_searchUserFullName ">Lucid Marry</label>
                     </div>
                     <p>User Profile:&nbsp;</p>
-                    <div class="detail">
+                    <div class="detail ">
                         <!-- get userName from DB-->
-                        <label class="admin_searchUserProfile">Author</label>
+                        <label class="admin_searchUserProfile ">Author</label>
                     </div>
-                    <button type="button" class="blue_btn" data-toggle="modal" data-target="#editModal" id="editDetail_btn">
+                    <button type="button " class="blue_btn " data-toggle="modal " data-target="#editModal " id="editDetail_btn ">
                         Edit Detail
                     </button>
                 </div>
-                <div class="modal-footer" style="border: none;">
+                <div class="modal-footer " style="border: none; ">
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index:1060">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
+    <div class="modal fade " id="saveModal " tabindex="-1 " role="dialog " aria-labelledby="exampleModalCenterTitle " aria-hidden="true " style="z-index:1060 ">
+        <div class="modal-dialog modal-dialog-centered " role="document ">
+            <div class="modal-content ">
+                <div class="modal-header ">
 
-                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Save Account and data?</p>
-                    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline; ">Save Account and data?</p>
+                    <!-- <button type="button " class="close " data-dismiss="modal " aria-label="Close ">
+                            <span aria-hidden="true ">&times;</span>
                         </button> -->
                 </div>
-                <div class="modal-body">
-                    <p class="deleteText">Are you sure you want to save?</p>
-                    <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
+                <div class="modal-body ">
+                    <p class="deleteText ">Are you sure you want to save?</p>
+                    <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
                         Cancel
                     </button>
-                    <button type="button" style="float: right;background-color: #F7685B;color: white;" class="blue_btn" onclick="saveEdit()">
+                    <button type="button " style="float: right;background-color: #F7685B;color: white; " class="blue_btn " onclick="saveEdit() ">
                         Confirm save
                     </button>
                 </div>
-                <div class="modal-footer" style="border: none;">
+                <div class="modal-footer " style="border: none; ">
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <img style="margin-left: 10px; margin-top: 20px" src="img/blue arrow.svg" data-dismiss="modal" aria-label="Close"></i>
-                    <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline;">Edit User Details</p>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+    <div class="modal fade " id="editModal " tabindex="-1 " role="dialog " aria-labelledby="exampleModalCenterTitle " aria-hidden="true ">
+        <div class="modal-dialog modal-dialog-centered " role="document ">
+            <div class="modal-content ">
+                <div class="modal-header ">
+                    <img style="margin-left: 10px; margin-top: 20px " src="img/blue arrow.svg " data-dismiss="modal " aria-label="Close "></i>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline; ">Edit User Profile</p>
+                    <button type="button " class="close " data-dismiss="modal " aria-label="Close ">
+                        <span aria-hidden="true ">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body ">
                     <div>
                         <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute; "></div>
                         <p style="font-size:16px; color: black; margin-left: 10px; display: inline; ">Info</p>
@@ -279,25 +276,25 @@
                         </div>
                     </div>
                     <div>
-                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
-                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Account</p>
+                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute; "></div>
+                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline; ">Account</p>
                     </div>
 
-                    <div class="edit-group">
+                    <div class="edit-group ">
                         <p>User Profile:&nbsp;</p>
-                        <div class="detail">
+                        <div class="detail ">
                             <!-- get userName from DB-->
-                            <select class="form-control" style="display: inline-block" id="admin_editUserProfile" ">
-                                <option value="Reviewer ">Reviewer</option>
-                                <option value="Author ">Author</option>
-                                <option value="User Admin ">User Admin</option>
-                                <option value="Conference Chair ">Conference Chair</option>
+                            <select class="form-control " style="display: inline-block " id="admin_editUserProfile " ">
+                            <option value="Reviewer ">Reviewer</option>
+                            <option value="Author ">Author</option>
+                            <option value="User Admin ">User Admin</option>
+                            <option value="Conference Chair ">Conference Chair</option>
 
                             </select>
                         </div>
                     </div>
- 
-  
+
+
 
                     <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
                         Back
@@ -329,13 +326,12 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js "></script>
 
     <script>
-        $(".nav .nav-link ").on("click ", function () {
+        $(".nav .nav-link ").on("click ", function() {
             $(".nav ").find(".active ").removeClass("active ");
             $(this).addClass("active ");
         });
 
-        $(function () {
-
+        $(function() {
             $('#searchUser').DataTable({
                 "paging ": true,
                 "lengthChange ": true,
@@ -344,6 +340,12 @@
                 "info ": true,
                 "autoWidth ": true,
                 "responsive ": true,
+            });
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
             });
         });
     </script>
