--- a/CSIT314/boundary/admin_searchUserPage.html
+++ b/CSIT314/boundary/admin_searchUserPage.html
@@ -148,7 +148,7 @@
                         <div>
                             <p class="searchLeft">Enter User Name: </p>
                             <!-- search User ID -->
-                            <input type="search" id="searchName" class="form-control form-control-lg" placeholder="Search User Name">
+                            <input type="search" id="admin_searchUserName" class="form-control form-control-lg" placeholder="Search User Name">
                             <!-- <select id="searchUserProfile" class="form-control" style="width: 200px;display: inline-block">
 
                                 <option>All</option>
