--- a/CSIT314/boundary/admin_searchUserPage.html
+++ b/CSIT314/boundary/admin_searchUserPage.html
@@ -146,9 +146,9 @@
 
                     <div class="card-body">
                         <div>
-                            <p class="searchLeft">Enter User Name: </p>
+                            <p class="searchLeft">Enter User Name/Account ID: </p>
                             <!-- search User ID -->
-                            <input type="search" id="admin_searchUserName" class="form-control form-control-lg" placeholder="Search User Name">
+                            <input type="search" id="admin_searchUserName" class="form-control form-control-lg" placeholder="Search User Name/Account ID">
                             <!-- <select id="searchUserProfile" class="form-control" style="width: 200px;display: inline-block">
 
                                 <option>All</option>
@@ -227,7 +227,7 @@
                     <p>Full name:&nbsp;</p>
                     <div class="detail">
                         <!-- get userFullName from DB-->
-                        <label class="admin_searchUserFullName">Lucid Marry</label>
+                        <label class="admin_searchUserFullName">Mike Doe</label>
                     </div>
                     <p>Age:&nbsp;</p>
                     <div class="detail">
