--- a/CSIT314/boundary/admin_searchUserPage.html
+++ b/CSIT314/boundary/admin_searchUserPage.html
@@ -169,7 +169,7 @@
                         <table id="searchUser" class="table table-hover table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="width:100%">
                             <thead>
                                 <tr>
-                                    <!--<th>NRIC</th>-->
+                                    <th>Account ID</th>
                                     <th>Full Name</th>
                                     <!-- <th>User Profile</th> -->
                                     <th>Action</th>
@@ -178,7 +178,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <!--              <td>S12345678</td>-->
+                                    <td>12345678</td>
                                     <td>Mike Doe</td>
                                     <!-- <td>Author</td> -->
                                     <td>
@@ -214,11 +214,11 @@
                     <!-- get userProfile from DB-->
                     <!-- <label class="admin_searchUserProfile">Author</label>
                     </div> -->
-                    <!--<p>NRIC:&nbsp;</p>
-                    <div class="detail">-->
-                    <!-- get userID from DB-->
-                    <!--<label class="admin_searchUserNRIC">Ab1234567</label>
-                    </div>-->
+                    <p>Account ID:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get userID from DB-->
+                        <label class="admin_searchUserAccountID">12345678</label>
+                    </div>
                     <!--<p>Username:&nbsp;</p>
                     <div class="detail">-->
                     <!-- get userName from DB-->
@@ -316,6 +316,13 @@
                     <!--<input type="text" class="form-control" id="admin_editUsername">
                         </div>
                     </div>-->
+                    <div class="edit-group">
+                        <p>Account ID:&nbsp;</p>
+                        <div class="detail">
+                            <!-- get userID from DB-->
+                            <label class="admin_searchUserAccountID">12345678</label>
+                        </div>
+                    </div>
                     <div class="edit-group">
                         <p>Email:&nbsp;</p>
                         <div class="detail">
