--- a/CSIT314/boundary/admin_searchUserProfilePage.html
+++ b/CSIT314/boundary/admin_searchUserProfilePage.html
@@ -279,7 +279,7 @@
                             <input type="text " class="form-control " id="admin_editFullName ">
                         </div>
                     </div>
-                    <div>
+                    <div style="clear: both; ">
                         <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
                         <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Account</p>
                     </div>
@@ -288,7 +288,7 @@
                         <p>User Profile:&nbsp;</p>
                         <div class="detail">
                             <!-- get userName from DB-->
-                            <select class="form-control select2" id="admin_editUserProfile" multiple="multiple">
+                            <select class="form-control select2" id="admin_editUserProfile" multiple="multiple" style="width: 100%; z-index: 1050;">
                                 <option value="Reviewer ">Reviewer</option>
                                 <option value="Author ">Author</option>
                                 <option value="User Admin ">User Admin</option>
