--- a/login_page.html
+++ b/login_page.html
@@ -58,6 +58,13 @@
                             <img class="icon" src="img/password_icon.svg" />
                             <input class="input-field" type="password" placeholder="Password" name="password">
                         </div><br />
+                        <div class="input-container">
+                            <img class="icon" src="img/userType_icon.svg" />
+                            <select class="input-field">
+                                <option value="userAuthor">Author</option>
+                                <option value="userReviewer">Reviewer</option>
+                            </select>
+                        </div><br />
                         <button type="submit" id="login_btn">Login</button>
                     </form>
                 </div>
