--- a/CSIT314/boundary/admin_searchUserProfilePage.html
+++ b/CSIT314/boundary/admin_searchUserProfilePage.html
@@ -88,7 +88,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/file.png"></i>
+                                <i class="nav-icon"><img src="img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user profile
 
