--- a/CSIT314/boundary/author_mainPage.html
+++ b/CSIT314/boundary/author_mainPage.html
@@ -89,7 +89,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="" class="nav-link">
-                                <i class="nav-icon"><img src="img/file.png"></i>
+                                <i class="nav-icon"><img src="img/add.svg"></i>
                                 <p class="navHeader">
                                     Add paper
                                 </p>
@@ -100,16 +100,16 @@
                             <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="img/search.svg"></i>
                                 <p class="navHeader">
-
+                                    Search paper
                                 </p>
                             </a>
 
                         </li>
                         <li class="nav-item active">
                             <a href="" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
-
+                                    View submitted paper
                                 </p>
                             </a>
 
