--- a/CSIT314/boundary/author_mainPage.html
+++ b/CSIT314/boundary/author_mainPage.html
@@ -17,7 +17,7 @@
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Admin</title>
+    <title>Author</title>
     <style>
         div {
             height: auto;
