--- a/CSIT314/boundary/author_profilePage.html
+++ b/CSIT314/boundary/author_profilePage.html
@@ -80,7 +80,7 @@
                 <nav class=" mt-2 ">
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
                         <li class="nav-item">
-                            <a href="author_mainPage.html" class="nav-link">
+                            <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="img/nav_home_icon.svg"></i>
                                 <p class="navHeader">
                                     Home
@@ -97,7 +97,7 @@
 
                         </li>
                         <li class="nav-item active">
-                            <a href="" class="nav-link">
+                            <a href="author_searchPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/search.svg"></i>
                                 <p class="navHeader">
                                     Search paper
@@ -106,15 +106,7 @@
 
                         </li>
                         <li class="nav-item active">
-                            <a href="" class="nav-link">
-                                <i class="nav-icon"><img src="img/file.png"></i>
-                                <p class="navHeader">
-                                    View paper
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a href="" class="nav-link">
+                            <a href="author_emailPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/email.png"></i>
                                 <p class="navHeader">
                                     View email
